# sieveOfEratosthenes

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  sieve.c
CMakeModules/: FindGMP.cmake
src/: common.c  common.h  constants.h  eratosthenes.c  eratosthenes.h  sieve.c
